--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,13 +1,13 @@
 name: dart_backend_two
 description: A sample command-line application.
 version: 1.0.0
-# homepage: https://www.example.com
 
 environment:
   sdk: '>=2.17.6 <3.0.0'
 
-# dependencies:
-#   path: ^1.8.0
+dependencies:
+  shelf: ^1.4.0
+  shelf_modular: ^2.0.1
 
 dev_dependencies:
   lints: ^2.0.0
